[metadata]
name = gd1_helpers
version = attr: gd1_helpers.VERSION
description = Helper tools for working with the GD-1 stream
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20
    astropy>=4.3
    pyyaml
    cython>=0.29
    scipy>=1.8
    packaging
    jax
    jaxlib
    jax_cosmo
    gala

[flake8]
max-line-length = 88
per-file-ignores =
    # imported but unused
    __init__.py: F401, F403
    # local variable assigned but never used
    test*.py: F841
    docs/tutorials/*: E703
extend-ignore =
    E203
    E226
    E402
    E741
    W503
    W504
